Blog - Adventskalender - 2025 - Day 03 - Detail Dialog
[PATCH] Blog – Advent Calendar – 2025 – Day 03 – Detail Dialog

UI (Vaadin)
- Moved OverviewView to `views/overview`; enhanced Grid UX:
  - Frozen shortcode column with copy action; ellipsised URL with tooltip
  - Expiry status pill (Expired/Today/in n days) with colour coding
  - LAZY filtering, context menu, double-click + Enter to open details
- CreateView extended:
  - Expiry date/time (DatePicker/TimePicker) plus “No expiry”
  - “Expiry must be in the future” validation; refactored to FormLayout + Binder
  - Uses `createCustomMapping(alias, url, expiresAt)`
- New component `DetailsDialog`:
  - Shows Shortcode, URL, Created, Expires + status pill
  - Actions: Open, Copy ShortURL, Copy URL, Delete event (ComponentEvents)

Core
- Added `expiresAt: Instant` to `ShortenRequest`; `toJson()` now emits `url`, `alias`, `expiresAt`
- `DefaultValues`: `SHORTCODE_BASE_URL = "https://3g3.eu/"` (TODO: make configurable)
- `AliasPolicy` logs validation calls

Server
- `UrlMappingUpdater` gains overload `createMapping(String alias, String url, Instant expiredAt)`
- `MappingCreator` supports `expiredAt` and writes it into `ShortUrlMapping`
- In-memory and EclipseStore stores implement the new overload
- `ShortenHandler`:
  - Parses via `JsonUtils.fromJson(ShortenRequest)`
  - Passes `expiresAt` to the store
  - Consistent JSON response via `JsonUtils.toJson(mapping)` + Location header
  - Streamlined logging
- `ListHandler.first(..)` now uses `getFirst()`

Client
- `URLShortenerClient.createCustomMapping` supports optional `expiredAt`
- Unified headers (`CONTENT_TYPE`, `JSON_CONTENT_TYPE`)
- Deserialises response into `ShortUrlMapping` (no longer extracts shortcode only)
- Tidied logging

Utils
- `JsonUtils`:
  - (De)serialisation for `ShortenRequest` incl. `expiresAt`
  - Simplified `toJsonListing*`
  - `parseJson(..)` strips `\n` before parsing

Tests
- `ShortenRequestJsonTest`: expectation updated to `"alias": "null"`

M